Closed Bug 232343 Opened 21 years ago Closed 21 years ago

spell checker broken

Categories

(Thunderbird :: Message Compose Window, defect)

x86
Windows XP
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird0.5

People

(Reporter: mscott, Assigned: mscott)

References

Details

Attachments

(1 file)

hangs in an infinite loop spell checking the first misspelled word

I don't think the recent string useage changes in this file would cause this...
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.5
I think bug 230840 caused this. more info coming soon
cc'ing Johnny, this loop in the spell checker happened in the builds the morning
after the landing for nsIContentIterator which is used by nsTextServicesDocument
to iterate over the document for the spell checker. AFter that landing we are no
longer iterating to the next word in the document. Looks like the iterator stays
on  the same word. 

Investigating.
Hmm, I'm unable to reproduce this hang, using Mail Compose (both plain text and
HTML) in SeaMonkey. Got a stacktrace, or more detailed instructions?
the key is to have at least one misspelled message in the compose window and
then you have to send the message. This also implies that you have spell check
on send set to true.
I could reproduce with seamonkey when spellchecking a few lines. jsut one or two
words didn't work, i needed more. I added a few newlines too. Make sure you have
at least a few wrong words. Ignore the misspellings. Now, spellchecks just loops
and loops. It will start at the beginning after a few words.
Ok, I'm seeing it now. Working on a fix.
Comment on attachment 140015 [details] [diff] [review]
Fix nsTextServicesDocument::GetFirstTextNodeInPrevBlock().

The patch in bug 230840 incorrectly made
nsTextServicesDocument::GetFirstTextNodeInPrevBlock() position the iterator at
the first text node in the previous block, when all it should do was return the
node.
Attachment #140015 - Flags: superreview?(bryner)
Attachment #140015 - Flags: review?(mscott)
Comment on attachment 140015 [details] [diff] [review]
Fix nsTextServicesDocument::GetFirstTextNodeInPrevBlock().

thanks johnny
Attachment #140015 - Flags: review?(mscott) → review+
Attachment #140015 - Flags: superreview?(bryner) → superreview+
this is probably related to Bug 232173
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 232173 has been marked as a duplicate of this bug. ***
Confirmed fixed in 2004012808 win32 build.  Thanks guys.
*** Bug 232724 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: