Fixing regression bug 232343. Make nsTextServicesDocument::GetFirstTextNodeInPrevBlock() just return the first text node in the previous block, and not also position the iterator at that node. r=mscott@mozilla.org, sr=bryner@brianryner.com